submitting first draft

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -18,3 +18,12 @@
   url = {https://arxiv.org/pdf/1205.2097.pdf},
   year = {2012}
 }
+@article{Baik2015,
+archivePrefix = {arXiv},
+arxivId = {arXiv:1505.07349v5},
+author = {Baik, Jinho and Lee, Ji Oon},
+eprint = {arXiv:1505.07349v5},
+title = {{Fluctuations of the free energy of the spherical Sherrington–Kirkpatrick model}},
+url = {https://arxiv.org/pdf/1505.07349.pdf},
+year = {2015}
+}
